# target-precoro

./: README.md  catalog.json  data.singer  fieldMap.json  meltano.yml  pyproject.toml  source-state.json  target-config.json  test.json  test.singer
etl-output-reference/: data.singer
payload_example/: data.singer
snapshots/: Bills_inwtHEvWU.snapshot.csv  bills_export_dynamics.hash.snapshot.parquet  documentcustomfields_L2ks5vLUL.snapshot.csv  gl_accounts_import_dynamics.hash.snapshot.parquet  itemcustomfields_L2ks5vLUL.snapshot.csv  precoro_invoices_ids.snapshot.parquet  purchase_invoices_dynamics_doc_number_to_id.snapshot.parquet  suppliers_L2ks5vLUL.snapshot.csv  suppliers_import_dynamics.hash.snapshot.parquet  tenant-config.json  vendors_export_dynamics.hash.snapshot.parquet
sync-output/: accounts-20260422T082919.csv  dimension_values-20260422T082919.csv  dimensions-20260422T082919.csv  general_ledger_entries_incremental-20260422T082919.csv  purchase_invoices-20260422T082919.csv  vendor_ledger_entries-20260422T082919.csv  vendors-20260422T082919.csv
target_precoro/: client.py  sinks.py  target.py
target_precoro/tests/: __init__.py  test_core.py
templates/: README.md  config.json
